--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ i:hover {
 }
 
 .three {
-    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.8)), url(/images/rentanisland.png);
+    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.8)), url(/images/watchlist.png);
 }
   
 .show-card h3 {
