Added hover effect on show-card

--- a/style.css
+++ b/style.css
@@ -150,6 +150,11 @@ i:hover {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
+    transition: all 300ms ease-in;
+}
+
+.show-card:hover {
+    transform: scale(0.95);
 }
 
 .one {
