--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ a {
     margin-top: 40px;
 }
 
+#intro {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
 #intro p {
     margin-bottom: 40px; 
 }
