--- a/style.css
+++ b/style.css
@@ -187,6 +187,15 @@ i:hover {
     color: white;
 }
 
+
+.contact-card {
+    border-radius: 4px;
+    background: #212121;
+    box-shadow: 0px 10px 30px rgb(0 0 0 / 10%);
+    padding: 40px;
+    margin: 20px 0;
+}
+
 @media (max-width: 960px) {
     .container {
       width: 800px;
