--- a/style.css
+++ b/style.css
@@ -194,6 +194,18 @@ i:hover {
     box-shadow: 0px 10px 30px rgb(0 0 0 / 10%);
     padding: 40px;
     margin: 20px 0;
+    text-align: center;
+}
+
+.contact-card .contact-txt {
+    font-size: 22px;
+}
+
+.contact-btn {
+    padding: 15px 20px;
+    color: white;
+    font-weight: 500;
+    letter-spacing: 1px;
 }
 
 @media (max-width: 960px) {
