--- a/style.css
+++ b/style.css
@@ -202,10 +202,12 @@ i:hover {
 }
 
 .contact-btn {
-    padding: 15px 20px;
+    padding: 10px 24px;
     color: white;
     font-weight: 500;
     letter-spacing: 1px;
+    border: 1px solid white;
+    border-radius: 4px;
 }
 
 @media (max-width: 960px) {
